Inner flex, grd overflow fix, and block As in Nav

--- a/src/_includes/scss/base/_grd.scss
+++ b/src/_includes/scss/base/_grd.scss
@@ -13,6 +13,7 @@ $total-columns: 12 !default;
 @mixin grdCell {
   box-sizing: border-box;
   flex-shrink: 0;
+  max-width: 100%;
 }
 
 .grdGrid {
